fixed some layout issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,3 +31,13 @@ html {
 #content {
   padding-top: 60px;
 }
+
+.vertical-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  text-align: center;
+}
